--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="verify-paysera" content="993d0f1dd9d3aa7276b421e4bd32258f">
-  <title>Document</title>
+  <meta name="verify-paysera" content="a9a5079c2c3e9a57eea89ca6725bfd2a">  <title>Document</title>
 </head>
 <body>
   Hello from Kähkukas
