--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <meta name="verify-paysera" content="a9a5079c2c3e9a57eea89ca6725bfd2a">  <title>Document</title>
 </head>
 <body>
-  Hello from Kähkukas
+  Hello from Kähkukas. Praegu on leht arendusfaasis. Kui see on valmis, siis on siin ilus lehekülg!
 </body>
 </html>
